[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/EnemyFish.gd" type="Script" id=1]
[ext_resource path="res://art/enemies/fishPink.png" type="Texture" id=2]
[ext_resource path="res://art/enemies/fishPink_swim.png" type="Texture" id=3]
[ext_resource path="res://sound/splash.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 28.2223, 18.7488 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30.8446, 21.546 )

[node name="EnemyFish" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="RayPivot" type="Position2D" parent="." index="2"]

[node name="FrontRayCast2D" type="RayCast2D" parent="RayPivot" index="0"]

position = Vector2( -27.3043, 4.54977 )
enabled = true
exclude_parent = true
cast_to = Vector2( -10, 0 )
collision_mask = 2

[node name="SplashPosition2D" type="Position2D" parent="." index="3"]

position = Vector2( -6.11881, 20.6291 )

[node name="DamageArea2D" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D" index="0"]

shape = SubResource( 3 )

[node name="SplashAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="body_entered" from="DamageArea2D" to="." method="_on_DamageArea2D_body_entered"]


